# llm

./: .gitignore  README.md  ai_model.py  environment.yml  pyproject.toml  python_practice.ipynb
notebooks/week_1/: 1_company_brochure_ollama.ipynb  2_company_brochure_open_ai.ipynb  company_brochure.ipynb
schemas/: link.py
week_1/: day1.ipynb  project_1.ipynb  project_2_with_ollama.ipynb
week_1/1_web_summarizer/: 3_with_ollama_package.ipynb
week_1/2-company-brochure/: project.ipynb  with_llama.ipynb  with_open_ai.ipynb
week_1/2-company-brochure/.ipynb_checkpoints/: project-checkpoint.ipynb
